# inkbook-digest

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  SPEC_V2.md  SPEC_V3.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
src/digest/: config.py  dashboard.py  epub.py  library.py  mailer.py  main.py  opds.py  reader.py  store.py
src/digest/static/: style.css
src/digest/templates/: index.html  opds_acquisition.xml  opds_navigation.xml
